1) Introduced additional structure in doxygen modules/groups 2) modules output is now sorted
--HG--
rename : src/lib/mpqc/utility/utility.hpp => src/lib/mpqc/utility/utility.dox
extra : rebase_source : 3d334639da445ac4f99d95f25d5340e426ed0407

--- a/src/lib/mpqc/utility/utility.dox
+++ b/src/lib/mpqc/utility/utility.dox
@@ -1,7 +1,7 @@
 #ifndef MPQC_UTILITY_UTILITY_HPP
 #define MPQC_UTILITY_UTILITY_HPP
 
-/// @defgroup Utility mpqc.Utility
-/// Various utilities and helpers
+/// @defgroup Utility mpqc.Util.Misc
+/// Miscellaneous utilities
 
 #endif /* MPQC_UTILITY_UTILITY_HPP */
