--- a/doc/top.dox
+++ b/doc/top.dox
@@ -1,5 +1,5 @@
 
-/** \mainpage The Massively Parallel Quantum Chemistry Program (MPQC) and the Scientific Computing Toolkit (SC)
+/** \mainpage The Massively Parallel Quantum Chemistry Program (MPQC)
 
 The Massively Parallel Quantum Chemistry program (MPQC) computes
 the properties of molecules using first-principles quantum mechanics on a wide variety
